--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -32,7 +32,12 @@ body{
 #searchItems{
   display: none;
 }
+.select2-selection__rendered li.select2-selection__choice:last-child{
+  padding-left: 5px;
+  padding-right: 5px;
+}
 
+.select2-selection__choice{display: none;}
 @keyframes cssAnimation {
   to   { 
     visibility: visible;
