--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,7 +33,7 @@ body{
 #searchItems{
   display: none;
 }
-.select2-selection__rendered li.select2-selection__choice:last-child{
+li.select2-selection__choice:not(:first-child){
   padding-left: 5px;
   padding-right: 5px;
 }
