--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,9 +33,12 @@ body{
 #searchItems{
   display: none;
 }
-li.select2-selection__choice:not(:first-child){
+li.select2-selection__choice:last-child{
   padding-left: 5px;
   padding-right: 5px;
+}
+li.select2-selection__choice:first-child{
+  padding-left: 20px;
 }
 
 .select2-selection__choice{display: none;}
