--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -37,7 +37,7 @@ li.select2-selection__choice:last-child{
   padding-left: 5px;
   padding-right: 5px;
 }
-li.select2-selection__choice:first-child{
+li.close-space{ 
   padding-left: 20px;
 }
 
