--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,12 +33,9 @@ body{
 #searchItems{
   display: none;
 }
-li.select2-selection__choice:last-child{
+li.select2-selection__choice:nth-child(2){
   padding-left: 5px;
   padding-right: 5px;
-}
-li.select2-selection__choice.close-space{ 
-  padding-left: 20px;
 }
 
 .select2-selection__choice{display: none;}
