--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,7 +33,7 @@ body{
 #searchItems{
   display: none;
 }
-li.select2-selection__choice:last-child{
+.select2-selection__rendered li.select2-selection__choice:nth-child(2){
   padding-left: 5px;
   padding-right: 5px;
 }
