--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,10 @@ body{
 }
 
 /* MULTIPLE SELECT */
+.select2-search__field::-webkit-input-placeholder,
+.select2-search__field::placeholder {
+    color: red !important;
+}
 .select2-selection {
   min-height: 38px !important;
   border-color: #ced4da !important;
