--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,9 @@ body{
 }
 
 /* MULTIPLE SELECT */
+.select2-selection--multiple{
+  padding-top: 3px;
+}
 .select2-selection {
   min-height: 38px !important;
   border-color: #ced4da !important;
