--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,9 +13,16 @@ body{
   border-color: #ced4da !important;
   padding-top: 3px;
 }
+.select2-search--inline {
+  display: contents; /*this will make the container disappear, making the child the one who sets the width of the element*/
+}
+
+.select2-search__field:placeholder-shown {
+  width: 100% !important; /*makes the placeholder to be 100% of the width while there are no options selected*/
+}
 .select2-default {
   padding-top: 3px;
-  }
+}
 .multiple-select{
   margin-left: 10px;
   animation: cssAnimation 0s 5s forwards;
