--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,7 +9,7 @@ body{
   min-height: 38px !important;
   border-color: #ced4da !important;
   padding-top: 3px;
-  padding-top: 5px;
+  padding-bottom: 0;
 }
 .multiple-select{
   margin-left: 10px;
