--- a/platform/themes/flex-home/public/css/base.css
+++ b/platform/themes/flex-home/public/css/base.css
@@ -286,7 +286,7 @@ a .nav-link {
     padding: 5px !important;
 }
 
-.flag1 {
+.active {
     width: 33px;
     height: 24px;
     background-color: #ffdaaf;
