--- a/platform/themes/flex-home/public/css/base.css
+++ b/platform/themes/flex-home/public/css/base.css
@@ -286,7 +286,7 @@ a .nav-link {
     padding: 5px !important;
 }
 
-.active {
+.flag1 {
     width: 33px;
     height: 24px;
     background-color: #ffdaaf;
